--- a/livraria/package.json
+++ b/livraria/package.json
@@ -14,7 +14,8 @@
     "express": "4.18.1",
     "knex": "^2.5.1",
     "sqlite": "4.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "supertest": "^6.3.4"
   },
   "type": "module",
   "devDependencies": {
